tests/cases/errors/sema/redeclare_local.hc
//@ error: redeclaration of `x`
U0 Main()
{
  I64 x;
  I64 x;
}
